Resolve FIXMEs